--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span class="info">0-Pedra | 1-Papel | 2-Tesoura</span>
         <button id="btn-play">Play</button>
         <h4>Tentativas: <span id="tentativas">0</span></h4>
-        <img src="./src/images/retro-offset-rock-paper-scissors-icons.webp" alt="Jokenpô">
+        <!-- <img src="./src/images/retro-offset-rock-paper-scissors-icons.webp" alt="Jokenpô"> -->
 
         <div class="res"></div>
     </div>
