--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
         <span class="info">0-Pedra | 1-Papel | 2-Tesoura</span>
         <button id="btn-play">Play</button>
         <h4>Tentativas: <span id="tentativas">0</span></h4>
-        <!-- <img src="./src/images/retro-offset-rock-paper-scissors-icons.webp" alt="Jokenpô"> -->
-
-        <div class="res"></div>
+        
+        <div class="res">
+            <h2>Resultado</h2>
+            <div class="placar">
+                <div class="player">
+                    <img src="src/images/papel.png" alt="Jogador">
+                    <h3>Player</h3>
+                </div>
+                <h2>X</h2>
+                <div class="machine">
+                    <img src="src/images/tesoura.png" alt="Algoritimo">
+                    <h3>Algoritmo</h3>
+                </div>
+            </div>
+            <h3>Você venceu!</h3>
+        </div>
     </div>
     <script src="src/js/index.js"></script>
 </body>
